--- a/proyecto_calidad_laravel/public/css/style.css
+++ b/proyecto_calidad_laravel/public/css/style.css
@@ -156,7 +156,7 @@
     right: 15px;
     border: none;
     content: "\f107";
-    font-family: "Font Awesome 5 Free";
+    font-family: "Font Awesome 5 Free", sans-serif;
     font-weight: 900;
     transition: .5s;
 }
@@ -213,7 +213,7 @@
     vertical-align: middle;
     border: none;
     content: "\f107";
-    font-family: "Font Awesome 5 Free";
+    font-family: "Font Awesome 5 Free", sans-serif;
     font-weight: 900;
     transition: .5s;
 }
